--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "@types/node": "14.14.6",
     "@types/react": "16.9.56",
     "prisma": "^3.4.0",
-    "typescript": "4.0.5"
+    "typescript": "^4.1.5"
   }
 }
