--- a/package.json
+++ b/package.json
@@ -11,17 +11,27 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@prisma/client": "^3.4.0",
-    "next": "9.5.5",
+    "antd": "^4.1.3",
+    "filestack-react": "^4.0.1",
+    "next": "^12.0.2",
     "next-auth": "^3.1.0",
+    "next-react-svg": "1.1.3",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-markdown": "5.0.2"
+    "react-lottie": "^1.2.3",
+    "safe-json-stringify": "^1.2.0",
+    "sass": "^1.26.3",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/next-auth": "3.1.14",
     "@types/node": "14.14.6",
     "@types/react": "16.9.56",
+    "babel-plugin-import": "^1.13.0",
+    "file-loader": "^6.2.0",
     "prisma": "^3.4.0",
     "typescript": "^4.1.5"
   }
