--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@loomhq/loom-embed": "^1.2.7",
+    "@loomhq/loom-sdk": "^2.21.2",
     "@prisma/client": "^3.4.0",
     "antd": "^4.1.3",
     "filestack-react": "^4.0.1",
