--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@ant-design/icons": "^4.7.0",
     "@loomhq/loom-embed": "^1.2.7",
     "@loomhq/loom-sdk": "^2.21.2",
-    "@prisma/client": "^3.4.0",
+    "@prisma/client": "^3.4.1",
     "antd": "^4.1.3",
     "filestack-react": "^4.0.1",
+    "lodash": "^4.17.21",
     "next": "^12.0.2",
     "next-auth": "^3.1.0",
     "next-react-svg": "1.1.3",
@@ -34,7 +35,7 @@
     "@types/react": "16.9.56",
     "babel-plugin-import": "^1.13.0",
     "file-loader": "^6.2.0",
-    "prisma": "^3.4.0",
+    "prisma": "^3.4.1",
     "typescript": "^4.1.5"
   }
 }
