--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-import": "^1.13.0",
     "file-loader": "^6.2.0",
     "prisma": "^3.4.1",
+    "react-quill": "^1.3.5",
     "typescript": "^4.1.5"
   }
 }
