--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^4.1.3",
     "filestack-react": "^4.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "^12.0.2",
     "next-auth": "^3.1.0",
     "next-react-svg": "1.1.3",
