--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-lottie": "^1.2.3",
     "safe-json-stringify": "^1.2.0",
     "sass": "^1.26.3",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "react-quill": "^1.3.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
@@ -40,7 +41,6 @@
     "babel-plugin-import": "^1.13.0",
     "file-loader": "^6.2.0",
     "prisma": "^3.4.1",
-    "react-quill": "^1.3.5",
     "typescript": "^4.1.5"
   }
 }
