--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-lottie": "^1.2.3",
+    "react-quill": "^1.3.5",
+    "react-responsive": "^9.0.0-beta.5",
     "safe-json-stringify": "^1.2.0",
     "sass": "^1.26.3",
-    "swr": "^1.0.1",
-    "react-quill": "^1.3.5"
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
